--- a/index.html
+++ b/index.html
@@ -255,15 +255,15 @@
         }
 
         socket.on('updateNumbers', updateNumbers);
-        // URLのクエリパラメータからadminの値を取得
-        const urlParams = new URLSearchParams(window.location.search);
-        const isAdmin = urlParams.get('admin') === 'true';
         
-        // 管理者用UIを表示する処理
-        if (isAdmin) {
-            document.getElementById('admin-controls').style.display = 'block';  // 管理者用コントロールを表示
+        // URLからadminパラメータを取得してチェック
+        const urlParams = new URLSearchParams(window.location.search);
+        if (urlParams.get('admin') === 'true') {
+            // 管理者用UIを表示
+            document.getElementById('admin-controls').style.display = 'block';
         } else {
-            document.getElementById('admin-controls').style.display = 'none';   // 管理者用コントロールを非表示
+            // 通常UI
+            document.getElementById('admin-controls').style.display = 'none';
         }
     </script>
 </body>
