--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             align-items: center;
             background-color: #eaeaea;
         }
-
         #main-container {
             display: flex;
             width: 100%;
@@ -32,7 +31,7 @@
             position: absolute;
             left: 50%;
             top: 50%;
-            transform: translate(-110%, -50%);
+            transform: translate(-110%, -50%); 
             border-radius: 10px;
         }
 
@@ -52,7 +51,7 @@
         #past-numbers {
             margin-left: 47%;
             display: grid;
-            grid-template-columns: repeat(10, 1fr);
+            grid-template-columns: repeat(10, 1fr); /* 最大10行の列 */
             gap: 10px;
             width: auto;
             height: auto;
@@ -62,9 +61,8 @@
             padding-top: 20px;
             padding-bottom: 20px;
         }
-
         .number {
-            font-size: 3em;
+            font-size: 3em; /* 文字サイズを少し大きく */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -90,7 +88,7 @@
             bottom: 20px;
             left: 20px;
             z-index: 10;
-            display: none;
+            display: flex;
             flex-direction: column;
             gap: 10px;
         }
@@ -104,6 +102,7 @@
             cursor: pointer;
         }
 
+        /* ポップアップ用スタイル */
         .popup {
             position: fixed;
             top: 50%;
@@ -117,7 +116,6 @@
             display: none;
             width: 400px;
         }
-
         .popup input {
             display: block;
             width: 90%;
@@ -125,14 +123,12 @@
             font-size: 16px;
             margin-top: 10px;
         }
-
         .popup button {
             margin-top: 10px;
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
         }
-
         .overlay {
             position: fixed;
             top: 0;
@@ -142,6 +138,20 @@
             background: rgba(0, 0, 0, 0.5);
             z-index: 99;
             display: none;
+        }
+
+        /* 管理者モードボタン */
+        #admin-button {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            font-size: 16px;
+            cursor: pointer;
+            z-index: 10;
         }
     </style>
 </head>
@@ -153,25 +163,22 @@
         <div id="past-numbers"></div>
     </div>
 
-    <div class="admin-controls" id="admin-controls">
+    <div class="admin-controls" id="admin-controls" style="display: none;">
         <input type="number" id="newNumber" placeholder="数字を入力 (1~75)" autofocus>
         <button onclick="sendNumber()">送信</button>
         <button onclick="resetNumbers()">リセット</button>
     </div>
 
     <!-- 管理者モードボタン -->
-    <button id="adminButton" onclick="showPasswordPopup()" style="position: fixed; bottom: 20px; right: 20px; padding: 10px; font-size: 16px; cursor: pointer;">
-        管理者モード
-    </button>
+    <button id="admin-button" onclick="showPasswordPopup()">管理者モード</button>
 
-    <!-- ポップアップ -->
+    <!-- パスワード入力用ポップアップ -->
     <div class="overlay" id="overlay"></div>
     <div class="popup" id="popup">
-        <div id="popupContent">
-            <p>パスワードを入力してください：</p>
+        <div>
+            <p>パスワードを入力してください:</p>
             <input type="password" id="passwordInput" placeholder="パスワード">
             <button onclick="checkPassword()">確認</button>
-            <button onclick="closePopup()">キャンセル</button>
         </div>
     </div>
 
@@ -179,7 +186,8 @@
     <script>
         const socket = io();
         let numbers = [];
-        let isAdmin = false;
+        let editingIndex = null;
+        const correctPassword = "admin"; // 管理者パスワード
 
         function getBingoColumnColor(number) {
             if (number >= 1 && number <= 15) return 'B';
@@ -200,21 +208,12 @@
             currentNumberDisplay.className = `number ${getBingoColumnColor(currentNumber)}`;
 
             pastNumbersDiv.innerHTML = numbers.map((num, index) => 
-                `<div class="number ${getBingoColumnColor(num)}" onclick="${isAdmin ? `editNumber(${index})` : ''}">
+                `<div 
+                    class="number ${getBingoColumnColor(num)}" 
+                    ${isAdmin ? `onclick="editNumber(${index})"` : ""}>
                     ${num}
                 </div>`
             ).reverse().join('');
-        }
-
-        function editNumber(index) {
-            if (!isAdmin) return;
-            const currentValue = numbers[index];
-            document.getElementById('currentValue').textContent = currentValue;
-            const editInput = document.getElementById('editInput');
-            editInput.value = '';
-            editInput.focus();
-            document.getElementById('overlay').style.display = 'block';
-            document.getElementById('popup').style.display = 'block';
         }
 
         function sendNumber() {
@@ -241,24 +240,28 @@
             document.getElementById('popup').style.display = 'block';
         }
 
-        function closePopup() {
+        function checkPassword() {
+            const password = document.getElementById('passwordInput').value;
+            if (password === correctPassword) {
+                window.location.search = "admin=true"; // パスワードが正しい場合、URLにパラメータを追加
+                document.getElementById('admin-controls').style.display = 'block'; // 管理者モードを表示
+                closePasswordPopup();
+            } else {
+                alert("パスワードが間違っています");
+            }
+        }
+
+        function closePasswordPopup() {
             document.getElementById('overlay').style.display = 'none';
             document.getElementById('popup').style.display = 'none';
         }
 
-        function checkPassword() {
-            const password = document.getElementById('passwordInput').value;
-            if (password === 'admin') {
-                isAdmin = true;
-                document.getElementById('admin-controls').style.display = 'block';
-                document.getElementById('adminButton').textContent = '管理者モード終了';
-                closePopup();
-            } else {
-                alert("パスワードが間違っています。");
-            }
-        }
-
         socket.on('updateNumbers', updateNumbers);
+
+        const isAdmin = window.location.search.includes('admin=true');
+        if (isAdmin) {
+            document.getElementById('admin-controls').style.display = 'block';
+        }
     </script>
 </body>
 </html>
